Fixes #77 - Updates to Java 11